--- a/1.css
+++ b/1.css
@@ -40,3 +40,47 @@ body {
 .content__element:last-child {
     margin-bottom: 0;
 }
+
+@media only screen and (min-width: 600px) {
+    .content__element {
+        flex: calc(50% - 15px);
+        margin-right: 15px;
+    }
+    .content__element:nth-child(even) {
+        margin-right: 0;
+    }
+    .content__element:nth-last-child(2) {
+        margin-bottom: 0;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    .main {
+        flex-direction: row;
+        padding-bottom: 15px;
+    }
+    
+    .sidebar {
+        width: 400px;
+        height: 100%;
+    }
+    
+    .content {
+        height: 100%;
+    }
+    
+    .content__element {
+        margin-left: 15px;
+        margin-right: 0;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .content__element {
+        flex: calc(33.33% - 15px);
+    }
+    
+    .content__element:nth-last-child(3) {
+        margin-bottom: 0;
+    }
+}
